--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "chai": "^3.4.1",
     "gulp": "^3.9.0",
     "gulp-babel": "^6.1.1",
+    "gulp-newer": "^1.1.0",
     "gulp-print": "^2.0.1",
     "gulp-watch": "^4.3.5",
     "mocha": "^2.3.4",
